# infectio-mesa

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
examples/: README.md
examples/particle-gradient/: README.md  cell.py  model.py  options.py  options_debug.py  run.py
examples/test-model/: README.md  cell.py  model.py  options.py  run_with_matplot.py
examples/vacv-epithelial/: README.md  WR_config.ini  dF11_default_config.ini  dVGF_default_config.ini  dVGFdF11_default_config.ini  debug_config.ini  no-diffusion-config.ini  reference_metrics_for_M061M084M089_WR_handpicked.csv  reference_metrics_for_M061M084M089_dF11_handpicked.csv  (+6 more)
infectio/: diffusion_solver.py  evaluate.py  particle.py  postmetric.py  reporters.py  utils.py
notebooks/: 0_evaluation_analysis.ipynb  1_dot_plot_of_scores_vs_single_param.ipynb  2_contour_plot_of_scores_vs_two_params_using_PCA_for_dVGFdF11.ipynb  4_1_timeseries_comparison_only_M061.ipynb  4_timeseries_comparison.ipynb  5_create_evaluation_csvfile.ipynb  6_epithelial_density_experimentation.ipynb  7_plots_for_paper.ipynb  8_eval_debug.ipynb  utils.py
scripts/: cpuN1C2.sbatch  cpuN1C2_param_identification.sbatch  dF11_param_tuning.sh  dVGF_param_tuning.sh  dVGFdF11_param_tuning.sh  download_all_final_plots.py  evaluate_experiments.sh  generate_param_list_file_for_array.py  make_sure_complete_samples.py  param_identification.sh  prepare_folders_for_download.py  run_array_template.sbatch  sort_bulk_evaluate.py  submit_param_array_from_listfile.sh  trina.py
tests/: test_evaluate.py
(+7 files in other folders)
