[tool.poetry]
name = "infectio-mesa"
version = "0.1.0"
description = ""
authors = ["ashkan <ashkan.mokarian@gmail.com>"]
readme = "README.md"
packages = [{include = "infectio_mesa"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.7.2"
mesa = "^1.2.1"
scipy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
